WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
288071
Unreviewed visionOS build fix after
290687@main
https://bugs.webkit.org/show_bug.cgi?id=288071
Summary
Unreviewed visionOS build fix after 290687@main
Ada Chan
Reported
2025-02-19 23:17:01 PST
Unreviewed visionOS build fix after
290687@main
Attachments
Add attachment
proposed patch, testcase, etc.
Ada Chan
Comment 1
2025-02-19 23:17:02 PST
<
rdar://problem/137779076
>
Ada Chan
Comment 2
2025-02-19 23:18:51 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40954
EWS
Comment 3
2025-02-20 00:09:40 PST
Committed
290694@main
(25bd2cdae94e): <
https://commits.webkit.org/290694@main
> Reviewed commits have been landed. Closing PR #40954 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug