Unreviewed visionOS build fix after 290687@main https://bugs.webkit.org/show_bug.cgi?id=288071 rdar://137779076

* Source/WebCore/Modules/model-element/HTMLModelElement.h:

Canonical link: https://commits.webkit.org/290694@main